ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirector-service
  labels:
    app: redirector
spec:
  selector:
    app: redirector
  type: LoadBalancer
  ports:
    - name: apache
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: springboot
      protocol: TCP
      port: 8081
      targetPort: 8081
